Fixed issue with flexbox where the book entries were not wrapping correctly to the next line, readme updated with validation images

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -172,6 +172,8 @@ div.card-panel.bluecat {
   padding: 24px;
   margin: 0.5rem 0 1rem 0;
   font-family: 'Libre Baskerville', serif;
+  display: flex;  
+  flex-wrap: wrap;
 }
 
 div.card-panel.browncat {
@@ -181,6 +183,13 @@ div.card-panel.browncat {
   padding: 24px;
   margin: 0.5rem 0 1rem 0;
   font-family: 'Libre Baskerville', serif;
+  display: flex;  
+  flex-wrap: wrap;
+}
+
+div.row.bookcontainer {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ------------------------------------ Forms ------------------------------------ */
